Added detail to installation page, added selfintro page aand gallery card component

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,25 @@
-#root{
+
+
+* {
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
   width: 100%;
-  text-align: center;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background: linear-gradient(180deg, #e6eaf5 0%, #f6f6f6 80%);
+}
+
+body {
+  position: fixed;
+  overflow: hidden;
+  overscroll-behavior-y: none;
+  font-family: "Inter var", sans-serif;
+  cursor: url(""),
+    auto;
 }
