--- a/src/App.scss
+++ b/src/App.scss
@@ -1,25 +1,40 @@
-
-
-* {
-  box-sizing: border-box;
-}
-
-html,
-body,
-#root {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background: linear-gradient(180deg, #e6eaf5 0%, #f6f6f6 80%);
-}
+@use './styles/partials/variables' as *;
+@use './styles/partials/typography' as *;
 
 body {
-  position: fixed;
-  overflow: hidden;
-  overscroll-behavior-y: none;
-  font-family: "Inter var", sans-serif;
-  cursor: url(""),
-    auto;
+    font-family: 'Inter var', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: $dark-charcoal;
+    cursor: url('../src/assets/Icons/PointerIcon.svg'), auto;
+}
+
+h1, h2, h3, h4 {
+    font-family: 'Antonio', sans-serif;
+    color: $cornflower-blue;
+}
+
+p {
+    color: $dark-charcoal;
+
+    &.small {
+        font-size: 0.75rem;
+        line-height: 1.125rem;
+    }
+
+    &.large {
+        font-size: 1rem;
+        line-height: 1.75rem;
+    }
+}
+
+a {
+    text-decoration: none;
+    color: $jordy-blue;
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
 }
