--- a/src/Components/TextInput/TextInput.scss
+++ b/src/Components/TextInput/TextInput.scss
@@ -1,3 +1,13 @@
+@use "../src/styles/partials/mixins" as *;
+@use "../src/styles/partials/variables" as *;
+@use "../src/styles/partials/typography" as *;
+
+.prompt{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 10 
+}
 .canvas{
     height: 100vh;
   }
