Added styling to canvas

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,8 +6,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: $dark-charcoal;
-    cursor: url('../src/assets/Icons/PointerIcon.svg'), auto;
+    cursor: url('../src/assets/Icons/PointerIcon\ 1.svg'), auto;
 }
 
 h1, h2, h3, h4 {
