--- a/src/Components/ModelUploader/ModelUploader.scss
+++ b/src/Components/ModelUploader/ModelUploader.scss
@@ -1,3 +1,10 @@
-canvas{
-  background-color: black;
+@use "../../styles/partials/variables" as *;
+@use "../../styles/partials/typography" as *;
+@use "../../styles/partials/mixins" as*;
+
+
+.canvas{
+  background-color:$vampire-black;
+  height: 95vh;
+  width: 100vw;
 }
