--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1,73 +1,57 @@
 @use "./variables" as *;
 @use "./typography" as *;
 
-body{
-    font-family: 'Avenir Next';
-}
-
-@mixin tablet {
-    @media (min-width:48rem) {
-        @content;
-    }
-}
-
-@mixin desktop {
-    @media (min-width:80rem) {
-        @content;
-    }
-}
-
 // Mixin for Font Styles
-@mixin font-style($size, $line-height, $weight: $font-avenir-regular) {
+@mixin font-style($size, $line-height, $weight: 400) {
     font-size: $size;
     line-height: $line-height;
     font-weight: $weight;
-  }
-  
-  // Desktop & Tablet Text Styles
-  @mixin page-header-desktop {
-    @include font-style(2.0625rem, 2.75rem, $font-avenir-bold);
-  }
-  
-  @mixin section-header-desktop {
-    @include font-style(.75rem, 1.25rem, $font-avenir-bold);
-  }
-  
-  @mixin subheader-desktop {
-    @include font-style(.875rem, 1.375rem, $font-avenir-bold);
-  }
-  
-  @mixin body-copy-desktop {
-    @include font-style(.875rem, 1.375rem, $font-avenir-regular);
-  }
-  
-  @mixin labels-buttons-desktop {
-    @include font-style(.75rem, 1.25rem, $font-avenir-bold);
-  }
-  
-  // Mobile Text Styles
-  @mixin page-header-mobile {
-    @include font-style(1.5rem, 2rem, $font-avenir-bold);
-  }
-  
-  @mixin section-header-mobile {
-    @include font-style(.75rem, 1.25rem, $font-avenir-bold);
-  }
-  
-  @mixin subheader-mobile {
-    @include font-style(.8125rem, 1.125rem, $font-avenir-bold);
-  }
-  
-  @mixin body-copy-mobile {
-    @include font-style(.8125rem, 1.125rem, $font-avenir-regular);
-  }
-  
-  @mixin labels-buttons-mobile {
-    @include font-style(.7rem, 1.25rem, $font-avenir-bold);
-  }
+}
 
- //flex box
-  @mixin flex-center {
+// Desktop & Tablet Text Styles
+@mixin page-header-desktop {
+    @include font-style(2.0625rem, 2.75rem, 600); // Antonio Bold
+}
+
+@mixin section-header-desktop {
+    @include font-style(0.75rem, 1.25rem, 600); // Antonio Bold
+}
+
+@mixin subheader-desktop {
+    @include font-style(0.875rem, 1.375rem, 600); // Antonio Bold
+}
+
+@mixin body-copy-desktop {
+    @include font-style(0.875rem, 1.375rem, 400); // Inter Regular
+}
+
+@mixin labels-buttons-desktop {
+    @include font-style(0.75rem, 1.25rem, 600); // Antonio Bold
+}
+
+// Mobile Text Styles
+@mixin page-header-mobile {
+    @include font-style(1.5rem, 2rem, 600); // Antonio Bold
+}
+
+@mixin section-header-mobile {
+    @include font-style(0.75rem, 1.25rem, 600); // Antonio Bold
+}
+
+@mixin subheader-mobile {
+    @include font-style(0.8125rem, 1.125rem, 600); // Antonio Bold
+}
+
+@mixin body-copy-mobile {
+    @include font-style(0.8125rem, 1.125rem, 400); // Inter Regular
+}
+
+@mixin labels-buttons-mobile {
+    @include font-style(0.7rem, 1.25rem, 600); // Antonio Bold
+}
+
+// Flexbox Mixins
+@mixin flex-center {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,41 +75,3 @@ body{
     align-items: center;
 }
 
-@mixin tablet-margin {
-    margin: 0 $default-tablet-margin;
-}
-
-@mixin desktop-margin {
-    margin: 0 $default-desktop-margin;
-}
-
-
-//comment section error state
-
-@mixin error-state{
-    textarea {
-      border: none;
-      outline: none;
-      padding: 0.75rem;
-      height: 22vw;
-      width: 62vw;
-      background-color: $alabaster;
-      outline: 0;
-      border: 0.062rem solid  #D22D2D;
-      border-radius: 0.25rem;
-      color: $brainflix-black;
-      resize: none;
-      border-style: solid;
-      border-width: 0.1rem;
-
-      @include tablet {
-        width: 54vw;
-        padding: 0.6rem 0.6rem 0.6rem 1rem;
-        height: 1.2rem;
-      }
-
-      @include desktop {
-        width: 28vw;
-      }
-    }
-}
