--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -1,7 +1,7 @@
 @import url("https://rsms.me/inter/inter.css");
 @import url("https://fonts.googleapis.com/css2?family=Antonio:wght@600&display=swap");
 
-body {
+body, p {
     font-family: 'Inter var', sans-serif;
 }
 
