Fixed api -env file connection

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 
 body {
     font-family: 'Inter var', sans-serif;
+    width: 100%;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,11 +12,11 @@ body {
 
 h1, h2, h3, h4 {
     font-family: 'Antonio', sans-serif;
-    color: $cornflower-blue;
 }
 
 p {
-    color: $dark-charcoal;
+    color: $jasmine;
+    margin: 0;
 
     &.small {
         font-size: 0.75rem;
@@ -30,7 +31,6 @@ p {
 
 a {
     text-decoration: none;
-    color: $jordy-blue;
 }
 
 ul {
