--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -3,4 +3,5 @@ $jordy-blue: #8AB9F1;
 $jasmine: #F8DE7E;
 $mikado-yellow: #FFC40A;
 $dark-charcoal: #2F2E2C;
+$light-charcoal: #62605d;
 $vampire-black: #050505;
