--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: $vampire-black;
     cursor: url('../src/assets/Icons/PointerIcon\ 1.svg'), auto;
 }
 
