--- a/src/Components/ModelUploader/ModelUploader.scss
+++ b/src/Components/ModelUploader/ModelUploader.scss
@@ -50,7 +50,7 @@
         }
         @include desktop{
           font-size: 8rem;
-          margin: 0 1rem 1rem 0;
+          margin: 0 1rem .4rem 0;
       }}
       &-sec{
         @include flex-center;
