--- a/src/Components/SelfIntro/SelfIntro.scss
+++ b/src/Components/SelfIntro/SelfIntro.scss
@@ -35,7 +35,7 @@
           margin: 0 1rem 1rem 0;
 
           &:hover {
-            color: $jordy-blue;
+            color: $mikado-yellow;
           }
         }
 
@@ -99,7 +99,8 @@
     }
     @include tablet{
         height: 90vh;
-        width: 40vw;
+        width: 60vw;
+        margin-left: 8rem;
       }
   }
 
@@ -116,7 +117,7 @@
 
     p {
       @include subheader-mobile;
-      color: $light-charcoal;
+      color: $dark-charcoal;
     }
 
     &_index {
@@ -137,7 +138,7 @@
       h1 {
         margin: 10px 0;
         &:hover {
-          color: $jordy-blue;
+          color: $jasmine;
         }
       }
       @include tablet{
@@ -147,10 +148,12 @@
     }
     @include tablet{
         justify-content: flex-end;
-        margin-bottom: 8rem;
+        margin-bottom: 12rem;
+        margin-right: 8rem;
       }
   }
   @include tablet{
     flex-direction: row;
+    gap:8rem;
   }
 }
