Added webdev component and linked it in landing page

--- a/src/Components/GalleryCard/GalleryCard.scss
+++ b/src/Components/GalleryCard/GalleryCard.scss
@@ -7,6 +7,13 @@
     flex-wrap: wrap;
     gap: 20px;
   }
+
+.webdev-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  
   
   .project-card {
     display: flex;
