--- a/src/Components/ImageModal/ImageModal.scss
+++ b/src/Components/ImageModal/ImageModal.scss
@@ -14,7 +14,6 @@ $vampire-black: #050505;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(5, 5, 5, 0.9); // vampire black with 90% opacity
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,7 +24,7 @@ $vampire-black: #050505;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(5, 5, 5, 0.5); // transparent background
+    background-color: rgba($vampire-black, 0.9); // transparent background
     z-index: 1;
   }
 
@@ -47,12 +46,12 @@ $vampire-black: #050505;
 
   &__close {
     position: absolute;
-    top: 20px;
-    right: 20px;
-    font-size: 2rem;
+    top: 2rem;
+    right: -6rem;
+    font-size: 3rem;
     background: none;
     border: none;
-    color: white;
+    color:$mikado-yellow;
     cursor: pointer;
     z-index: 3;
   }
@@ -60,26 +59,25 @@ $vampire-black: #050505;
   &__arrow {
     position: absolute;
     top: 50%;
-    font-size: 3rem;
+    font-size: 4rem;
     background: none;
     border: none;
-    color: white;
+    color:$mikado-yellow;
     cursor: pointer;
     z-index: 3;
 
     &--left {
-      left: 20px;
+      left: -6rem;
     }
 
     &--right {
-      right: 20px;
+      right: -6rem;
     }
   }
 
   @include tablet {
     &__content {
       width: 50%;
-      background-color: rgba(5, 5, 5, 0.5); // 50% transparent vampire black
       justify-content: center;
       align-items: center;
     }
