--- a/src/Components/ModelUploader/ModelUploader.scss
+++ b/src/Components/ModelUploader/ModelUploader.scss
@@ -20,7 +20,7 @@
     position: absolute;
     bottom:2rem;
     padding: 0 1rem 1rem 1rem;
-    gap:2rem;
+    gap:1rem;
     cursor: pointer;
     h1{
       font-size: 3rem;
@@ -29,6 +29,9 @@
       margin: 0 1rem 1rem 0;
       &:hover{
         color: $jordy-blue;
+      }
+      @include tablet{
+        margin: 6rem 1rem 1rem 0;
       }
     }
     p{
@@ -42,33 +45,37 @@
       display: flex;
       flex-direction: column;
       h4{
+        font-size: 3rem;
         color: $mikado-yellow;
         z-index: 14;
-        margin: .6rem .7rem .7rem 0;
-        letter-spacing: 2px;
+        margin: 0rem 1rem 2.6rem 0;
         &:hover{
           color: $jordy-blue;
         }
-        @include desktop{
+        @include tablet{
           font-size: 8rem;
           margin: 0 -.6rem .4rem 0;
+          letter-spacing: 2px;
       }}
       &-sec{
         @include flex-center;
         flex-direction: row;
         gap:2rem;
+        
         &-row{
-          @include desktop{
+          display:none;
+          @include tablet{
             @include flex-center;
           flex-direction: row;
           gap:1rem;
+          
           }
         }
         @include desktop{
           justify-content: flex-end;
           gap:1rem;
-        }
-        
+       }
+   
       }
       @include desktop{
         align-items: flex-end;
