--- a/src/pages/ProjectGallery/ProjectGallery.scss
+++ b/src/pages/ProjectGallery/ProjectGallery.scss
@@ -3,8 +3,9 @@
 
 .project-container {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 2rem;
 }
 
 .loading-container {
