loading spinner corrected

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -35,6 +35,7 @@
     .footer-location {
       @include labels-buttons-mobile;
       color: $light-charcoal;
+      padding-bottom: .6rem;
     }
   }
 }
