--- a/src/Components/SelfIntro/SelfIntro.scss
+++ b/src/Components/SelfIntro/SelfIntro.scss
@@ -24,7 +24,7 @@
         flex-direction: row;
         z-index: 18;
         position: absolute;
-        bottom: 2rem;
+        bottom: 23rem;
         padding: 0 1rem 1rem 1rem;
         cursor: pointer;
 
@@ -143,6 +143,7 @@
       }
       @include tablet{
         flex-direction: row;
+        flex-wrap: wrap;
         gap:1rem;
       }
     }
