Loding spinner updated- working

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@ body {
     padding: 0;
     box-sizing: border-box;
     background-color: $vampire-black;
+    color: $jasmine;
     cursor: url('../src/assets/Icons/PointerIcon\ 1.svg'), auto;
 }
 
