--- a/src/pages/AllProjects/AllProjects.scss
+++ b/src/pages/AllProjects/AllProjects.scss
@@ -8,6 +8,13 @@
   gap: 20px;
 }
 
-.loading-container {
-  @include loading-spinner(#FFC40C);
+.loading{
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+  align-items: center;
+  margin-top: 20%;
+  &-spinner{
+    @include loading-spinner;
+  }
 }
